--- a/playbooks/super_playbook.yml
+++ b/playbooks/super_playbook.yml
@@ -119,6 +119,7 @@
             #"'not found' in explosiva.stderr"
             #explosiva.stderr is match(".*not.*")
             explosiva.stderr is search("n.t f..nd")
+            #when: ansible_loop.index % 3 == 0  Nos falla por la versión de Ansible
             
           #Nuestra primera tarea en bucle
         - name: Primer bucle
@@ -128,7 +129,34 @@
           loop_cotrol:
             index_var: cpus
           when: (cpus+1) % 3 == 0
-          #when: ansible_loop.index % 3 == 0  Nos falla por la versión de Ansible
+          
+          - name: Primer bucle
+            debug:
+              msg: 'Hola que hase!'
+            tags:
+              - instalaciones
+              - preparacion
+      
+          #ansible-playbook mificheroplaybook -i mificheroinventario --tags "instalaciones, configuraciones"
+          
+          
+          - name: Varias tareas a ejecutar de golpe
+            block:
+              - name: Primera tarea del bloque
+                debug:
+                  msg: 'Hola que hase!'
+              - name: Segunda tarea del bloque
+                debug:
+                  msg: 'Y usté, que hase!'
+            rescue:
+              - name: Tarea de rescate, en caso de que se produzca un error en la de dentro del block
+                debug:
+                  msg: 'Y usté, que hase!'
+            always:
+              - name: Tarea que se va a ejecutar despues del block y/o despues del rescue
+                debug:
+                  msg: 'Y usté, que hase!'
+
           
           # Filtros jinja2
           # abs, attr, batch, capitalize, center, default, dictsort, escape, filesizeformat, first, float, forceescape, format, 
